spaces-terraform-modules-mongoDB_gov/modules/eks-cluster-stack/configs/master_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spaces-${environment}-${app_type}-ingress
  namespace: istio-system
  labels:
    app: dashboard
  annotations:
    alb.ingress.kubernetes.io/scheme: ${scheme}
    alb.ingress.kubernetes.io/group.name: ${app_type}
    alb.ingress.kubernetes.io/certificate-arn: ${certificate}
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/healthcheck-port: status-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 443
          - path: /healthz/ready
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 15021
